page cutoff fix pls

--- a/react_project/src/index.css
+++ b/react_project/src/index.css
@@ -1,6 +1,6 @@
 /* index.css */
 html, body, #root {
-  min-height: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
